grad students only pages

--- a/public/Kanbas/Courses/Settings/index.html
+++ b/public/Kanbas/Courses/Settings/index.html
@@ -2,23 +2,98 @@
 <a href="/Kanbas/Courses/Settings/Course Navigation/screen.html"><button>Navigation</button></a>
 <br>
 <h2>Course Details</h2>
-Image:
+<b>Image:</b>
 <br>
 <button>Choose Image</button>
 <br><br>
-Name: <br>
+<b>Name:</b> <br>
 CS4550 Web Development
 <br><br>
-Course Code: <br>
+<b>Course Code:</b> <br>
 CS4550
 <br><br>
-Blueprint Course: <br>
+<b>Blueprint Course:</b> <br>
 No
 <br><br>
-Course Template: <br>
+<b>Course Template:</b> <br>
 Enable course as a Course Template
 <br><br>
-Time Zone: <br>
+<b>Time Zone:</b> <br>
 <select><option>Eastern Time (US & Canada)</option></select>
 <br><br>
-
+<b>SIS ID:</b> <br>
+CS4550
+<br><br>
+<b>Subaccount:</b> <br>
+<a href="#">CS Graduate</a>
+<br><br>
+<b>Term:</b> <br>
+Spring 2024 Semester Full Term
+<br><br>
+<b>Participation:</b> <br>
+<select><option value="">Term</option></select>
+<br>
+Course participation limited to <b>term</b> start and end dates.
+<br>
+<b>Start</b>
+<br>
+<input type="date">
+<br>
+<b>End</b>
+<br>
+<input type="date"><br>
+<input type="checkbox" value="" id="chkbox-1"/>
+<label for="chkbox-1">Restrict students from viewing course before term start date</label><br/>
+<input type="checkbox" value="" id="chkbox-2"/>
+<label for="chkbox-2">Restrict students from viewing course after term end date</label><br/>
+<br>
+<b>Default due time:</b><br>
+<select><option value="">Account default (11:59pm)</option></select>
+<br>
+This incluences the user interface for setting due dates. It does not change the time due for any existings assignments.
+<br><br>
+<b>Language:</b><br>
+<select><option value="">Not set (user configurable, defaults to English)</option></select>
+<br><br>
+<b>File Storage:</b><br>
+10000 megabytes
+<br><br>
+<b>Large course:</b>
+<br>
+<input type="checkbox" value="" id="chkbox-3"/>
+<label for="chkbox-3">Launch SpeedGrader Filtered by Student Group</label><br/>
+<br>
+<b>Grading Scheme:</b><br>
+<input type="checkbox" value="" id="chkbox-4"/>
+<label for="chkbox-4">Enable course grading scheme</label><br/>
+<br>
+<b>License:</b><br>
+<select><option value="">Private (Copyrighted)</option></select> <b style="color: red; border-radius: 10px; border-color: red; border: solid; border-width: 2px;">?</b>
+<br><br>
+<b>File Copyright:</b><br>
+<input type="checkbox" value="" id="chkbox-5"/>
+<label for="chkbox-5">Copyright and license information must be provided for files before they are published.</label><br/>
+<br>
+<b>Visibility:</b>
+<br>
+If you need to make your course public please contact your administrator/support. <br>
+<select disabled><option value="">Course</option></select> <b style="color: red; border-radius: 10px; border-color: red; border: solid; border-width: 2px;">?</b>
+<br>
+<input type="checkbox" value="" id="chkbox-6"/>
+<label for="chkbox-6">Include this course in the public course index</label>
+<br><br>
+<b>Format:</b><br>
+<select><option value="">On-Campus</option></select>
+<br><br>
+<b>Mastery Paths:</b><br>
+<input type="checkbox" value="" id="chkbox-7"/>
+<label for="chkbox-7">Enable individual learning paths for students based on assessment</label>
+<br><br>
+<b>Description:</b>
+<br>
+<textarea name="" id="" cols="50" rows="6"></textarea>
+<br><br>
+<a href="#">more options</a>
+<br><hr>
+<button style="float: right; color: white; background-color: red;">Update Course Details</button>
+<br>
