--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -1,52 +1,62 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<table>
-    <tbody style="vertical-align: top">
-        <tr>
-            <td>
-                <ul>
-                    <li><a href="/Kanbas/Account/Profile/screen.html">
-                    Account</a></li>
-                    <li>
-                    <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
-                    </li>
-                    <li>
-                    <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
-                    </li>
-                    <li>
-                    <a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                    <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Studio</a></li>
-                    <li><a href="#">Comms</a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
-            </td>
-            <td>
-                <ul>
-                    <li><a href="#">Notifications</a></li>
-                    <li><a href="screen.html">Profile</a></li>
-                    <li><a href="#">Files</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">ePortfolios</a></li>
-                    <li><a href="#">Shared Content</a></li>
-                    <li><a href="#">The Hub</a></li>
-                    <li><a href="#">Qwickly Course Tools</a></li>
-                    <li><a href="#">Global Announcements</a></li>
-                </ul>
-            </td>
-            <td>
-                Connor Wilson's Profile
-                <hr>
-                <h1>Connor Wilson
-                    <a href="Edit/screen.html"><button style="float: right;"><i class="fa">&#xf040;</i> Edit Profile</button></a>
-                </h1>
-                <h2>Contact</h2>
-                No registered services, you can add some on the <a href="#">settings</a> page.
-                <h2>Biography</h2>
-                PhD student in data visualization studying aesthetic metrics and optimization for network diagrams. Enjoyer of board and card games.
-                <h2>Links</h2>
-                <a href="https://cwilson22.github.io/connorwilson.phd">My homepage</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<html>
+  <head>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <table>
+        <tbody style="vertical-align: top">
+            <tr>
+                <td>
+                    <ul class="wd-kanbas-navigation" style="height: 100%;">
+                        <li><a href="http://northeastern.edu" style="font-size: xx-large; color: red;">N</a></li>
+                        <li class="wd-active"><a href="/Kanbas/Account/Profile/screen.html">
+                          <i class="fa fa-user"></i><br/>Account</a></li>
+                        <li>
+                        <a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i><br/>Dashboard</a>
+                        </li>
+                        <li>
+                        <a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i><br/>Courses</a>
+                        </li>
+                        <li>
+                        <a href="/Kanbas/Calendar/index.html"><i class="fa fa-calendar"></i><br/>Calendar</a></li>
+                        <li><a href="/Kanbas/Inbox/index.html"><i class="fa fa-inbox" aria-hidden="true"></i><br/>Inbox</a></li>
+                        <li><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i><br/>History</a></li>
+                        <li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i><br/>Commons</a></li>
+                        <li><a href="#"><i class="fa fa-sitemap" aria-hidden="true"></i><br/>Studio</a></li>
+                        <li><a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i><br/>Help</a></li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li><a href="#">Notifications</a></li>
+                        <li><a href="screen.html">Profile</a></li>
+                        <li><a href="#">Files</a></li>
+                        <li><a href="#">Settings</a></li>
+                        <li><a href="#">ePortfolios</a></li>
+                        <li><a href="#">Shared Content</a></li>
+                        <li><a href="#">The Hub</a></li>
+                        <li><a href="#">Qwickly Course Tools</a></li>
+                        <li><a href="#">Global Announcements</a></li>
+                    </ul>
+                </td>
+                <td>
+                    Connor Wilson's Profile
+                    <hr>
+                    <h1>Connor Wilson
+                        <a href="Edit/screen.html"><button style="float: right;"><i class="fa">&#xf040;</i> Edit Profile</button></a>
+                    </h1>
+                    <h2>Contact</h2>
+                    No registered services, you can add some on the <a href="#">settings</a> page.
+                    <h2>Biography</h2>
+                    PhD student in data visualization studying aesthetic metrics and optimization for network diagrams. Enjoyer of board and card games.
+                    <h2>Links</h2>
+                    <a href="https://cwilson22.github.io/connorwilson.phd">My homepage</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+  </body>
+</html>
