--- a/public/Kanbas/Courses/Assignments/Edit/screen.html
+++ b/public/Kanbas/Courses/Assignments/Edit/screen.html
@@ -1,107 +1,181 @@
-<table>
-    <tbody style="vertical-align: top">
-        <tr>
-            <td>
-                <ul>
-                    <li><a href="/Kanbas/Account/Profile/screen.html">
-                       Account</a></li>
-                    <li>
-                     <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
-                    </li>
-                    <li>
-                     <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
-                    </li>
-                    <li>
-                     <a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                    <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Studio</a></li>
-                    <li><a href="#">Comms</a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
-            </td>
-            <td style="padding-right: 50px;">
-                <ul>
-                    <li>
-                      <a href="/Kanbas/Courses/Home/screen.html">
-                        Home</a></li>
-                    <li><a href="/Kanbas/Courses/Modules/screen.html">
-                        Modules</a></li>
-                    <li><a href="/Kanbas/Courses/Piazza/index.html">
-                        Piazza</a></li>
-                    <li><a href="#">Zoom Meetings</a></li>
-                    <li><a href="/Kanbas/Courses/Grades/screen.html">
-                        Grades</a></li>
-                    <li><a href="/Kanbas/Courses/Assignments/screen.html">
-                        Assignments</a></li>
-                    <li><a href="#">Quizzes</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Panopto Video</a></li>
-                    <li><a href="#">Discussions</a></li>
-                    <li><a href="#">Announcements</a></li>
-                    <li><a href="#">Pages</a></li>
-                    <li><a href="#">Files</a></li>
-                    <li><a href="#">Rubrics</a></li>
-                    <li><a href="#">Outcomes</a></li>
-                    <li><a href="#">Collaborations</a></li>
-                    <li><a href="#">Syllabus</a></li>
-                    <li><a href="/Kanbas/Courses/Settings/screen.html">Settings</a></li>
-                </ul>            
-            </td>
-            <td>
-                <select><option value="">SpeedGrader</option></select>
-                <hr>
-                <h2>Assignment Name</h2>
-                <input type="text" value="A1 - ENV + HTML">
-                <br><br>
-                <form><textarea cols="25" rows="2">This is the assignment description.</textarea></form>
-                Points
-                <br>
-                <input type="text" value="100">
-                <br><br>
-                Assignment Group
-                <br>
-                <select><option value="">ASSIGNMENTS</option></select>
-                <br><br>
-                Display Grade as
-                <br>
-                <select><option value="">Percentage</option></select>
-                <p style="margin-left: 15px;">
-                    Submission Type<br>
-                    <select><option value="">Online</option></select>
-                    <br><br>
-                    Online Entry Options<br>
-                    <input type="checkbox" value="Text Entry" id="textentry">
-                    <label for="textentry">Text Entry</label><br/>
-                    <input type="checkbox" value="Website URL" id="weburl">
-                    <label for="weburl">Website URL</label><br/>
-                    <input type="checkbox" value="Media Recordings" id="media">
-                    <label for="media">Media Recordings</label><br/>
-                    <input type="checkbox" value="Student Annotation" id="annotate">
-                    <label for="annotate">Student Annotation</label><br/>
-                    <input type="checkbox" value="File Uploads" id="uploads">
-                    <label for="uploads">File Uploads</label><br/><br/>
-                    Assign<br/>
-                    Assign to
-                    <br/>
-                    <input type="text" value="Everyone">
-                    <br><br>
-                    Due
-                    <br>
-                    <input type="date">
-                    <br><br>
-                    Available from
-                    <br>
-                    <input type="date">
-                    <br><br>
-                    Until
-                    <br>
-                    <input type="date">
-                    <br><br>
-                    <a href="/Kanbas/Courses/Assignments/screen.html"><button>Cancel</button></a>
-                    <a href="/Kanbas/Courses/Assignments/screen.html"><button>Save</button></a>
-                </p>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<html>
+  <head>
+    <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Assignments/index.css" />
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css" />
+  </head>
+  <body>
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="pt-2 pl-2 d-none d-md-block">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="/Kanbas/Courses/Home/screen.html">Course Name</a></li>
+          <li class="breadcrumb-item"><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
+          <li class="breadcrumb-item active" aria-current="page">A1 - ENV + HTML</li>
+        </ol>
+        <hr>
+    </nav>
+  
+    <div class="d-flex">
+    <div class="d-none d-md-block">
+        <ul class="wd-kanbas-navigation" style="height: 100%;">
+        <li><a href="http://northeastern.edu" style="font-size: xx-large; color: red;">N</a></li>
+        <li><a href="/Kanbas/Account/Profile/screen.html">
+            <i class="fa fa-user"></i><br/>Account</a></li>
+        <li>
+        <a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i><br/>Dashboard</a>
+        </li>
+        <li class="wd-active">
+        <a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i><br/>Courses</a>
+        </li>
+        <li>
+        <a href="/Kanbas/Calendar/index.html"><i class="fa fa-calendar"></i><br/>Calendar</a></li>
+        <li><a href="/Kanbas/Inbox/index.html"><i class="fa fa-inbox" aria-hidden="true"></i><br/>Inbox</a></li>
+        <li><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i><br/>History</a></li>
+        <li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i><br/>Commons</a></li>
+        <li><a href="#"><i class="fa fa-sitemap" aria-hidden="true"></i><br/>Studio</a></li>
+        <li><a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i><br/>Help</a></li>
+        </ul>
+    </div>
+
+
+    <div class="d-none d-md-block">
+        <ul class="wd-navigation">
+            <li>
+            <a href="/Kanbas/Courses/Home/screen.html">
+                Home</a></li>
+            <li><a href="/Kanbas/Courses/Modules/screen.html">
+                Modules</a></li>
+            <li><a href="/Kanbas/Courses/Piazza/index.html">
+                Piazza</a></li>
+            <li><a href="#">Zoom Meetings</a></li>
+            <li><a href="/Kanbas/Courses/Grades/screen.html">
+                Grades</a></li>
+            <li class="wd-active"><a href="/Kanbas/Courses/Assignments/screen.html">
+                Assignments</a></li>
+            <li><a href="#">Quizzes</a></li>
+            <li><a href="#">People</a></li>
+            <li><a href="#">Panopto Video</a></li>
+            <li><a href="#">Discussions</a></li>
+            <li><a href="#">Announcements</a></li>
+            <li><a href="#">Pages</a></li>
+            <li><a href="#">Files</a></li>
+            <li><a href="#">Rubrics</a></li>
+            <li><a href="#">Outcomes</a></li>
+            <li><a href="#">Collaborations</a></li>
+            <li><a href="#">Syllabus</a></li>
+            <li><a href="/Kanbas/Courses/Settings/screen.html">Settings</a></li>
+        </ul>
+    </div>
+    
+    <div class="flex-fill p-2">
+        <span class="float-end">
+            <span class="text-success">
+                <i class="fa fa-check-circle text-success"></i> Published 
+            </span>
+            <button type="button" class="btn btn-light btn-lg btn-outline-secondary"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></button>
+        </span><br><br>
+        <hr>
+        <p class="mb-1">Assignment Name</p>
+        <input type="text" class="w-100 form-control" value="A1 - ENV + HTML">
+        <textarea class="form-control mt-3 mb-3" rows="5" >A1 - ENV + HTML assignment description</textarea>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3"><div class="float-end">
+                    Points
+                </div></div>
+                <div class="col-md-8">
+                    <input type="text" class="form-control w-100" value="100">
+                </div>
+            </div>
+            <div class="row top-buffer">
+                <div class="col-md-3"><div class="float-end">
+                    Assignment Group
+                </div></div>
+                <div class="col-md-8">
+                    <select class="form-select">
+                        <option>ASSIGNMENTS</option>
+                        <option>other</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row top-buffer">
+                <div class="col-md-3"><div class="float-end">
+                    Display Grade as
+                </div></div>
+                <div class="col-md-8">
+                    <select class="form-select">
+                        <option>Percentage</option>
+                        <option>other</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row top-buffer">
+                <div class="col-md-3"><div class="float-end"></div></div>
+                <div class="col-md-8">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1"> Do not count this assignment towards the final grade</label>
+                </div>
+            </div>
+            <div class="row top-buffer">
+                <div class="col-md-3"><div class="float-end">
+                    Assign
+                </div></div>
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-body">
+                            <span><b>Assign to</b></span><br>
+                            <select class="form-select">
+                                <option>Everyone</option>
+                            </select>
+                            <div class="mt-3">
+                                <span><b>Due</b></span>
+                            </div>
+                            <input type='date' class="form-control" />
+                            <div class="row mt-3 mb-3">
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <b>Available from</b>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <input type='date' class="form-control" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <b>Until</b>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <input type='date' class="form-control" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body bg-light">
+                            <p class="text-center p-0 m-0"><i class="fa fa-plus ms-2"></i> Add</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br><hr>
+            <span class="float-end">
+                <a href="/Kanbas/Courses/Assignments/screen.html"><button type="button" class="btn btn-light btn-lg btn-outline-secondary">Cancel</button></a>
+                <a href="/Kanbas/Courses/Assignments/screen.html"><button type="button" class="btn btn-danger btn-lg">Save</button></a>
+            </span>
+            <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                    <label class="form-check-label" for="exampleCheck2"> Notify users that this content has changed</label>
+            <br><br><hr>
+        </div>
+    </div>
+
+  </body>
+</html>
