--- a/public/Kanbas/Courses/Settings/Course Navigation/screen.html
+++ b/public/Kanbas/Courses/Settings/Course Navigation/screen.html
@@ -1,174 +1,185 @@
-<table>
-    <tbody style="vertical-align: top">
-      <tr>
-        <td>
-            <ul>
-                <li><a href="/Kanbas/Account/Profile/screen.html">
-                   Account</a></li>
-                <li>
-                 <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
-                </li>
-                <li>
-                 <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
-                </li>
-                <li>
-                 <a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-                <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Comms</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>            
-        </td>
-        <td style="padding-right: 50px;">
-            <ul>
-                <li>
-                  <a href="/Kanbas/Courses/Home/screen.html">
-                    Home</a></li>
-                <li><a href="/Kanbas/Courses/Modules/screen.html">
-                    Modules</a></li>
-                <li><a href="/Kanbas/Courses/Piazza/index.html">
-                    Piazza</a></li>
-                <li><a href="#">Zoom Meetings</a></li>
-                <li><a href="/Kanbas/Courses/Grades/screen.html">
-                    Grades</a></li>
-                <li><a href="/Kanbas/Courses/Assignments/screen.html">
-                    Assignments</a></li>
-                <li><a href="#">Quizzes</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">Panopto Video</a></li>
-                <li><a href="#">Discussions</a></li>
-                <li><a href="#">Announcements</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Files</a></li>
-                <li><a href="#">Rubrics</a></li>
-                <li><a href="#">Outcomes</a></li>
-                <li><a href="#">Collaborations</a></li>
-                <li><a href="#">Syllabus</a></li>
-                <li><a href="/Kanbas/Courses/Settings/screen.html">Settings</a></li>
-            </ul>            
-        </td>
-        <td>
-            <a href="/Kanbas/Courses/Settings/screen.html"><button>Course Details</button></a>
-            <a href="/Kanbas/Courses/Settings/Course Navigation/screen.html"><button>Navigation</button></a>
-            <br><br>
-            Drag and drop items to reorder them in course navigation.
-            <br><br>
-            <table border="1" width="50%">
-                <tbody>
-                    <tr>
-                        <td>Home</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Modules</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Piazza</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Zoom Meetings</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Assignments</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Quizzes</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Grades</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>People</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Panopto Video</td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                </tbody>
-            </table>
-            <br>
-            Drag items here to hide them from students. <br>
-            Disabling most pages will cause students who view those pages to be redirected to the course home page. <br>
-            <table border="1" width="50%">
-                <tbody>
-                    <tr>
-                        <td>Chat<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>SCORM<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Attendance<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Barnes and Noble Bookstore<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Digication<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Top Hat<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Syllabus<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Perusall<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Microsoft Teams Meetings<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>FACT Reporting and Photo Roster<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Progress Reports (Navigate)<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Microsoft Teams for Canvas<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>VHL Central<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Gradescope 1.3<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>Credentials<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                    <tr>
-                        <td>iClicker<br><i>Page disabled, won't appear in navigation</i></td>
-                        <td style="text-align: right;"><span>&#8942;</span></td>
-                    </tr>
-                </tbody>
-            </table>
-            <br>
-            <button style="color: white; background-color: red;">Save</button>
-            <br>
-        </td>
-      </tr>
-    </tbody>
-</table>
+<html>
+    <head>
+        <link rel="stylesheet" href="/Kanbas/styles.css" />
+        <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+        <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css" />
+    </head>
+    <body>
+    <table>
+        <tbody style="vertical-align: top">
+        <tr>
+            <td>
+                <ul class="wd-kanbas-navigation" style="height: 100%;">
+                    <li><a href="http://northeastern.edu" style="font-size: xx-large; color: red;">N</a></li>
+                    <li><a href="/Kanbas/Account/Profile/screen.html">
+                      <i class="fa fa-user"></i><br/>Account</a></li>
+                    <li>
+                    <a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i><br/>Dashboard</a>
+                    </li>
+                    <li class="wd-active">
+                    <a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i><br/>Courses</a>
+                    </li>
+                    <li>
+                    <a href="/Kanbas/Calendar/index.html"><i class="fa fa-calendar"></i><br/>Calendar</a></li>
+                    <li><a href="/Kanbas/Inbox/index.html"><i class="fa fa-inbox" aria-hidden="true"></i><br/>Inbox</a></li>
+                    <li><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i><br/>History</a></li>
+                    <li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i><br/>Commons</a></li>
+                    <li><a href="#"><i class="fa fa-sitemap" aria-hidden="true"></i><br/>Studio</a></li>
+                    <li><a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i><br/>Help</a></li>
+                </ul>
+            </td>
+            <td style="padding-right: 50px;">
+                <ul class="wd-navigation">
+                    <li>
+                    <a href="/Kanbas/Courses/Home/screen.html">
+                        Home</a></li>
+                    <li><a href="/Kanbas/Courses/Modules/screen.html">
+                        Modules</a></li>
+                    <li><a href="/Kanbas/Courses/Piazza/index.html">
+                        Piazza</a></li>
+                    <li><a href="#">Zoom Meetings</a></li>
+                    <li><a href="/Kanbas/Courses/Grades/screen.html">
+                        Grades</a></li>
+                    <li><a href="/Kanbas/Courses/Assignments/screen.html">
+                        Assignments</a></li>
+                    <li><a href="#">Quizzes</a></li>
+                    <li><a href="#">People</a></li>
+                    <li><a href="#">Panopto Video</a></li>
+                    <li><a href="#">Discussions</a></li>
+                    <li><a href="#">Announcements</a></li>
+                    <li><a href="#">Pages</a></li>
+                    <li><a href="#">Files</a></li>
+                    <li><a href="#">Rubrics</a></li>
+                    <li><a href="#">Outcomes</a></li>
+                    <li><a href="#">Collaborations</a></li>
+                    <li><a href="#">Syllabus</a></li>
+                    <li class="wd-active"><a href="/Kanbas/Courses/Settings/screen.html">Settings</a></li>
+                </ul>
+            </td>
+            <td>
+                <a href="/Kanbas/Courses/Settings/screen.html"><button>Course Details</button></a>
+                <a href="/Kanbas/Courses/Settings/Course Navigation/screen.html"><button>Navigation</button></a>
+                <br><br>
+                Drag and drop items to reorder them in course navigation.
+                <br><br>
+                <table border="1" width="50%">
+                    <tbody>
+                        <tr>
+                            <td>Home</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Modules</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Piazza</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Zoom Meetings</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Assignments</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Quizzes</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Grades</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>People</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Panopto Video</td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br>
+                Drag items here to hide them from students. <br>
+                Disabling most pages will cause students who view those pages to be redirected to the course home page. <br>
+                <table border="1" width="50%">
+                    <tbody>
+                        <tr>
+                            <td>Chat<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>SCORM<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Attendance<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Barnes and Noble Bookstore<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Digication<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Top Hat<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Syllabus<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Perusall<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Microsoft Teams Meetings<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>FACT Reporting and Photo Roster<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Progress Reports (Navigate)<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Microsoft Teams for Canvas<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>VHL Central<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Gradescope 1.3<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>Credentials<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                        <tr>
+                            <td>iClicker<br><i>Page disabled, won't appear in navigation</i></td>
+                            <td style="text-align: right;"><span>&#8942;</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br>
+                <button style="color: white; background-color: red;">Save</button>
+                <br>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    </body>
+</html>
