--- a/public/Kanbas/Navigation/index.html
+++ b/public/Kanbas/Navigation/index.html
@@ -1,17 +1,29 @@
-<ul>
-    <li><a href="/Kanbas/Account/Profile/screen.html">
-       Account</a></li>
-    <li>
-     <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
-    </li>
-    <li>
-     <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
-    </li>
-    <li>
-     <a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-    <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-    <li><a href="#">History</a></li>
-    <li><a href="#">Studio</a></li>
-    <li><a href="#">Comms</a></li>
-    <li><a href="#">Help</a></li>
-</ul>
+<html>
+  <head>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+  </head>
+  <body>
+
+        <ul class="wd-kanbas-navigation" style="height: 100%;">
+            <li><a href="http://northeastern.edu" style="font-size: xx-large; color: red;">N</a></li>
+            <li><a href="/Kanbas/Account/Profile/screen.html">
+              <i class="fa fa-user"></i><br/>Account</a></li>
+            <li class="wd-active">
+            <a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i><br/>Dashboard</a>
+            </li>
+            <li>
+            <a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i><br/>Courses</a>
+            </li>
+            <li>
+            <a href="/Kanbas/Calendar/index.html"><i class="fa fa-calendar"></i><br/>Calendar</a></li>
+            <li><a href="/Kanbas/Inbox/index.html"><i class="fa fa-inbox" aria-hidden="true"></i><br/>Inbox</a></li>
+            <li><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i><br/>History</a></li>
+            <li><a href="#"><i class="fa fa-sign-out" aria-hidden="true"></i><br/>Commons</a></li>
+            <li><a href="#"><i class="fa fa-sitemap" aria-hidden="true"></i><br/>Studio</a></li>
+            <li><a href="#"><i class="fa fa-question-circle" aria-hidden="true"></i><br/>Help</a></li>
+        </ul>
+
+    </body>
+</html>
